Über navbar hovern: menu klappt aus; drauf klicken: link wird verfolgt

--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -33,7 +33,7 @@
         </li>
         <div class="dropdown">
           <li class="nav-item dropdown">
-            <a class="nav-link " data-toggle="dropdown" id="dropdownMenu1"
+            <a class="nav-link" data-toggle="dropdown disabled"
             href="http://craft.dev/uber-uns" style="color:black; font-weight: bold;"> ÜBER UNS </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
@@ -66,7 +66,7 @@
 
         <div class="dropdown">
           <li class="nav-item dropdown">
-            <a class="nav-link" data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
+            <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
             aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> PROJEKTE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
@@ -112,7 +112,7 @@
 
         <div class="dropdown">
           <li class="nav-item dropdown">
-            <a class="nav-link" data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
+            <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
             aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> SPENDEN </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
@@ -158,7 +158,7 @@
 
         <div class="dropdown">
           <li class="nav-item dropdown">
-            <a class="nav-link" data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
+            <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
             aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> FÜR SIE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
