Einbinden neuer BIlder

--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -16,7 +16,7 @@
   <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
     <!-- Chance Logo -->
 
-    <a class="navbar-brand" href="http://craft.dev">
+    <a class="navbar-brand"  href="http://localhost/craft/web/">
       <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" alt="Logo" width="160" height="120">
     </a>
 
@@ -29,12 +29,12 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar"  >
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="http://craft.dev/uber-uns/arbeitsweise" style="color:black; font-weight: bold;"> HOME </a>
+          <a class="nav-link" href="http://localhost/craft/web/" style="color:black; font-weight: bold;"> HOME </a>
         </li>
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled"
-            href="http://craft.dev/uber-uns" style="color:black; font-weight: bold;"> ÜBER UNS </a>
+            href="http://localhost/craft/web/ueberUns" style="color:black; font-weight: bold;"> ÜBER UNS </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-item"> <a href="#"> Arbeitsweise</a> </li>
@@ -67,7 +67,7 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> PROJEKTE </a>
+            aria-expanded="false" href="http://localhost/craft/web/projekte" style="color:black; font-weight: bold;"> PROJEKTE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-item"> <a href="#"> Wo wir arbeiten</a> </li>
@@ -113,7 +113,7 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> SPENDEN </a>
+            aria-expanded="false" href="http://localhost/craft/web/spenden" style="color:black; font-weight: bold;"> SPENDEN </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-submenu">
@@ -159,7 +159,7 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> FÜR SIE </a>
+            aria-expanded="false" href="http://localhost/craft/web/fuerSie" style="color:black; font-weight: bold;"> FÜR SIE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-item"> <a href="#"> Chance e.V. kommt zu Ihnen</a> </li>
@@ -200,10 +200,10 @@
           </ul>
         </div>
         <li class="nav-item">
-          <a class="nav-link" href="http://craft.dev/blog" style="color:black; font-weight: bold;"> BLOG </a>
+          <a class="nav-link" href="http://localhost/craft/web/blog" style="color:black; font-weight: bold;"> BLOG </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> KONTAKT </a>
+          <a class="nav-link" href="http://localhost/craft/web/kontakt" style="color:black; font-weight: bold;"> KONTAKT </a>
         </li>
 
       </ul>
