--- a/templates/_layouts/layoutHome.html
+++ b/templates/_layouts/layoutHome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Card</title>
+  <title>Chance International</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
@@ -16,31 +16,20 @@
 
 </head>
 
+{% block headerbildPosition1 %} {% endblock %}
+
 
 <body>
 
 
-      <div class="container-fluid no-padding" style="padding-top: 100px;">
-        <img class="img-fluid" src="{{ craft.assets.filename('chance-ueber-uns-header.jpg').one().getUrl() }}">
-      </div>
+
+
+{% block headerbildPosition2 %} {% endblock %}
+
+
 
   {% include "_layouts/navbar" %}
 
-  <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 50px; position: relative;">
-
-
-      <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
-
-
-      <div class="container Achter-Spaltenlayout">
-        <div id="text1" style="padding-bottom:80px; ">
-          <h1 style="padding-bottom: 30px;"> Für ein gelingendes, selbstbestimmtes Leben in Einklang mit der Schöpfung </h1>
-          <p> Begleiten, bestärken, befähigen und bewahren – unser Ansatz zu einem
-            selbstbestimmten und gelingendem Leben. Motiviert von der Liebe Gottes für Mensch und Natur.
-          </p>
-          </div>
-        </div>
-      </div>
 
 
     {% block block1 %} {% endblock %}
