--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
 <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
 <div class="container Achter-Spaltenlayout">
-  <div id="text1" style="padding-bottom:80px; ">
+  <div style="padding-bottom:80px; ">
     <h1 style="padding-bottom: 30px;"> Für Mensch und Schöpfung  </h1>
-    <p> Chance e.V. ist eine christliche, soziale und ökologische Initiative für nachhaltige Entwicklung
+    <p id="Anleser"> Chance e.V. ist eine christliche, soziale und ökologische Initiative für nachhaltige Entwicklung
       im peruanischen Amazonasgebiet und bei den Maasai in Kenia.
     </p>
     </div>
