--- a/templates/_layouts/layoutHome.html
+++ b/templates/_layouts/layoutHome.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <link href="http://localhost/craft/templates/_layouts/stylevorgaben.css" rel="stylesheet" />
+  <link href="http://localhost/craft/templates/_layouts/navbarCSS_mobile.css" rel="stylesheet" />
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -23,19 +24,22 @@
 <body>
 
 
+  {% if  craft.mobileDetect.isMobile %}   {% include "_layouts/navbar-mobile" %}  {% endif %}
+
+  {% if  craft.mobileDetect.isMobile == false %}   {% include "_layouts/navbar-mobile" %} {% endif %}
+
 
 
 {% block headerbildPosition2 %} {% endblock %}
 
 
 
-  {% include "_layouts/navbar" %}
+
+{% block block1 %} {% endblock %}
 
 
 
-    {% block block1 %} {% endblock %}
-
-    {% include "_layouts/footer" %}
+{% include "_layouts/footer" %}
 
 
   </body>
