--- a/templates/ueberUns/index.html
+++ b/templates/ueberUns/index.html
@@ -17,7 +17,7 @@
 <div class="container" style="max-width: 1160px;">
   <div class="card-deck">
 
-    {% for entry in craft.entries.section('uberUns') %}
+    {% for entry in craft.entries.section('ueberUns') %}
     <div class="col-md-6 col-lg-4">
     <div class="card" style="  width: 360px; height: 436px; margin-bottom: 40px;">
       <img class="card-img-top" src="{{ entry.bild.one().url }}" alt="Card image" height="240px">
