--- a/templates/_layouts/layoutHome.html
+++ b/templates/_layouts/layoutHome.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <link href="http://localhost/craft/templates/_layouts/stylevorgaben.css" rel="stylesheet" />
-  <link href="http://localhost/craft/templates/_layouts/navbarCSS_mobile.css" rel="stylesheet" />
+  {% if  craft.mobileDetect.isMobile %}   <link href="http://localhost/craft/templates/_layouts/navbarCSS_mobile.css" rel="stylesheet" />   {% endif %}
+  {% if  craft.mobileDetect.isMobile == false %}   <link href="http://localhost/craft/templates/_layouts/navbarCSS.css" rel="stylesheet" />   {% endif %}
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -26,7 +27,7 @@
 
   {% if  craft.mobileDetect.isMobile %}   {% include "_layouts/navbar-mobile" %}  {% endif %}
 
-  {% if  craft.mobileDetect.isMobile == false %}   {% include "_layouts/navbar-mobile" %} {% endif %}
+  {% if  craft.mobileDetect.isMobile == false %}   {% include "_layouts/navbar" %} {% endif %}
 
 
 
