--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -1,6 +1,6 @@
 
 <!-- navbar-light links the colors with the background image -->
-<nav class="navbar navbar-expand-md fixed-top navbar-light" data-toggle="affix" style="padding-top: 0px; margin-top: -10px;">
+<nav class="navbar navbar-expand-lg fixed-top navbar-light" data-toggle="affix" style="padding-top: 0px; margin-top: -10px;">
 
   <!-- d-sm-flex: creates a flexbox for small screens;
 
