--- a/templates/index.html
+++ b/templates/index.html
@@ -66,4 +66,18 @@ Lebensqualität selbstbestimmt zu verbessern.
   </div>
 </div>
 
+{% set category = craft.categories.slug('Arbeitsweise') %}
+{% set entries = craft.entries.section('ueberUns').relatedTo(category).find() %}
+
+{# If there are any entries, loop through them #}
+{% if entries | length %}
+
+    {# For each entry we find, do this #}
+    {% for entry in entries %}
+        <p>{{ entry.title }}</p>
+    {% endfor %}
+
+{% endif %}
+
+
 {% endblock %}
