verwenden von kategorien in craft

--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -37,7 +37,7 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled"
-            href="http://localhost/craft/web/ueberUns" style="color:black; font-weight: bold;"> ÜBER UNS </a>
+            href="http://craft.dev/ueberUns" style="color:black; font-weight: bold;"> ÜBER UNS </a>
 
             <ul class="dropdown-menu multi-level " role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-item"> <a href="#"> Arbeitsweise</a> </li>
@@ -70,7 +70,7 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="http://localhost/craft/web/projekte" style="color:black; font-weight: bold;"> PROJEKTE </a>
+            aria-expanded="false" href="http://craft.dev/projekte" style="color:black; font-weight: bold;"> PROJEKTE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-item"> <a href="#"> Wo wir arbeiten</a> </li>
@@ -116,7 +116,7 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="http://localhost/craft/web/spenden" style="color:black; font-weight: bold;"> SPENDEN </a>
+            aria-expanded="false" href="http://craft.dev/spenden" style="color:black; font-weight: bold;"> SPENDEN </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-submenu">
@@ -162,7 +162,7 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="http://localhost/craft/web/fuerSie" style="color:black; font-weight: bold;"> FÜR SIE </a>
+            aria-expanded="false" href="http://craft.dev/fuerSie" style="color:black; font-weight: bold;"> FÜR SIE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-item"> <a href="#"> Chance e.V. kommt zu Ihnen</a> </li>
@@ -203,10 +203,10 @@
           </ul>
         </div>
         <li class="nav-item">
-          <a class="nav-link" href="http://localhost/craft/web/blog" style="color:black; font-weight: bold;"> BLOG </a>
+          <a class="nav-link" href="http://craft.dev/blog" style="color:black; font-weight: bold;"> BLOG </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://localhost/craft/web/kontakt" style="color:black; font-weight: bold;"> KONTAKT </a>
+          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> KONTAKT </a>
         </li>
 
       </ul>
