--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@ Lebensqualität selbstbestimmt zu verbessern.
 </div>
 
 {% set category = craft.categories.slug('Arbeitsweise') %}
-{% set entries = craft.entries.section('ueberUns').relatedTo(category).find() %}
+{% set entries = craft.entries.section('ueberUns').relatedTo(category).all() %}
 
 {# If there are any entries, loop through them #}
 {% if entries | length %}
