--- a/templates/navbar der online website mit links.html
+++ b/templates/navbar der online website mit links.html
@@ -1,6 +1,6 @@
 
 <!-- navbar-light links the colors with the background image -->
-<nav class="navbar navbar-expand-lg fixed-top navbar-light" data-toggle="affix" style="padding-top: 0px; margin-top: -10px;">
+<nav class="navbar navbar-expand-md fixed-top navbar-light" data-toggle="affix" style="padding-top: 0px; margin-top: -10px;">
 
   <!-- d-sm-flex: creates a flexbox for small screens;
 
@@ -15,34 +15,31 @@
 
   <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
     <!-- Chance Logo -->
-    <a class="navbar-brand" id="logo"  href="http://localhost/craft/web/">
+
+    <a class="navbar-brand"  href="https://www.aufbau-Website.de/craft/web/">
       <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" alt="Logo" width="160" height="120">
     </a>
 
-
-
     <!-- Toggler/collapsibe Button -->
-    <button class="navbar-toggler" id="button" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon" style="color:black;"></span>
     </button>
 
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar"  >
-
-
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="http://localhost/craft/web/" style="color:black; font-weight: bold;"> HOME </a>
+          <a class="nav-link" href="https://www.aufbau-Website.de/craft/web/" style="color:black; font-weight: bold;"> HOME </a>
         </li>
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled"
-            href="http://craft.dev/ueberUns" style="color:black; font-weight: bold;"> ÜBER UNS </a>
+            href="https://www.aufbau-Website.de/craft/web/ueberUns" style="color:black; font-weight: bold;"> ÜBER UNS </a>
 
-            <ul class="dropdown-menu multi-level " role="menu" aria-labelledby="dropdownMenu">
-              <li class="dropdown-item"> <a href="http://craft.dev/ueberUns/arbeitsweise.html"> Arbeitsweise</a> </li>
+            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+              <li class="dropdown-item"> <a href="https://www.aufbau-Website.de/craft/web/ueberUns/arbeitsweise.html"> Arbeitsweise</a> </li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="http://craft.dev/ueberUns/konzept.html"> Konzept</a> </li>
+              <li class="dropdown-item"> <a href="https://www.aufbau-Website.de/craft/web/ueberUns/konzept.html"> Konzept</a> </li>
               <li class="dropdown-divider"></li>
               <li class="dropdown-item"> <a href="#"> Leitbild</a> </li>
               <li class="dropdown-divider"></li>
@@ -70,7 +67,7 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="http://craft.dev/projekte" style="color:black; font-weight: bold;"> PROJEKTE </a>
+            aria-expanded="false" href="https://www.aufbau-Website.de/craft/web/projekte" style="color:black; font-weight: bold;"> PROJEKTE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-item"> <a href="#"> Wo wir arbeiten</a> </li>
@@ -116,7 +113,7 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="http://craft.dev/spenden" style="color:black; font-weight: bold;"> SPENDEN </a>
+            aria-expanded="false" href="https://www.aufbau-Website.de/craft/web/spenden" style="color:black; font-weight: bold;"> SPENDEN </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-submenu">
@@ -162,7 +159,7 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown disabled" aria-haspopup="true"
-            aria-expanded="false" href="http://craft.dev/fuerSie" style="color:black; font-weight: bold;"> FÜR SIE </a>
+            aria-expanded="false" href="https://www.aufbau-Website.de/craft/web/fuerSie" style="color:black; font-weight: bold;"> FÜR SIE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-item"> <a href="#"> Chance e.V. kommt zu Ihnen</a> </li>
@@ -203,10 +200,10 @@
           </ul>
         </div>
         <li class="nav-item">
-          <a class="nav-link" href="http://craft.dev/blog" style="color:black; font-weight: bold;"> BLOG </a>
+          <a class="nav-link" href="https://www.aufbau-Website.de/craft/web/blog" style="color:black; font-weight: bold;"> BLOG </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> KONTAKT </a>
+          <a class="nav-link" href="https://www.aufbau-Website.de/craft/web/kontakt" style="color:black; font-weight: bold;"> KONTAKT </a>
         </li>
 
       </ul>
