--- a/templates/_layouts/stylevorgaben.css
+++ b/templates/_layouts/stylevorgaben.css
@@ -1,8 +1,8 @@
 
 @font-face {
     font-family: 'source_sans_proSBdIt';
-    src: url('fonts/source-sans-pro-semibold-italic.woff2') format('woff2'),
-         url('fonts/source-sans-pro-semibold-italic.woff') format('woff');
+    src: url(/fonts/source-sans-pro-semibold-italic.woff2) format('woff2'),
+         url(/fonts/source-sans-pro-semibold-italic.woff) format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -10,8 +10,8 @@
 
 @font-face {
     font-family: 'nerisblack';
-    src: url('http://localhost/craft/bilder/fonts/nerisblack-webfont.woff2') format('woff2'),
-         url('http://localhost/craft/bilder/fonts/nerisblack-webfont.woff2/nerisblack-webfont.woff') format('woff');
+    src: url("http://localhost/craft/web/fonts/nerisblack-webfont.woff2") format('woff2'),
+         url("http://localhost/craft/web/fonts/nerisblack-webfont.woff") format('woff');
     font-weight: bold;
     font-style: normal;
 
