--- a/templates/templatesDerWebsite/_layouts/layoutHome.html
+++ b/templates/templatesDerWebsite/_layouts/layoutHome.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-  <link href="http://localhost/craft/templates/_layouts/stylevorgaben.css" rel="stylesheet" />
-  {% if  craft.mobileDetect.isMobile %}   <link href="http://localhost/craft/templates/_layouts/navbarCSS_mobile.css" rel="stylesheet" />   {% endif %}
-  {% if  craft.mobileDetect.isMobile == false %}   <link href="http://localhost/craft/templates/_layouts/navbarCSS.css" rel="stylesheet" />   {% endif %}
+  <link href="https://aufbau-website.de/craft/web/CSSundJS/stylevorgaben.css" rel="stylesheet" />
+  {% if  craft.mobileDetect.isMobile %}   <link href="https://aufbau-website.de/craft/web/CSSundJS/navbarCSS_mobile.css" rel="stylesheet" />   {% endif %}
+  {% if  craft.mobileDetect.isMobile == false %}   <link href="https://aufbau-website.de/craft/web/CSSundJS/navbarCSS.css" rel="stylesheet" />   {% endif %}
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-  <script src="http://localhost/craft/templates/_layouts/javascript.js"> </script>
+  <script src="https://aufbau-website.de/craft/web/CSSundJS/javascript.js"> </script>
 
 
 
