--- a/templates/templatesDerWebsite/_layouts/navbar.html
+++ b/templates/templatesDerWebsite/_layouts/navbar.html
@@ -51,7 +51,7 @@
               <li class="dropdown-divider"></li>
 
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Empfehlungen</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/ueberUns/empfehlungen.html">Empfehlungen</a>
                 <ul class="dropdown-menu">
                   <li class="dropdown-item"><a tabindex="-1" href="#">1. Empfehlung</a></li>
                   <li class="dropdown-divider"></li>
@@ -70,18 +70,19 @@
             aria-expanded="false" href="https://aufbau-Website.de/craft/web/projekte" style="color:black; font-weight: bold;"> PROJEKTE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
-              <li class="dropdown-item"> <a href="#"> Wo wir arbeiten</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/projekte/wowirarbeiten.html"> Wo wir arbeiten</a> </li>
               <li class="dropdown-divider"></li>
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Programme</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/programme.html">Programme</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">Dorfentwicklung</a></li>
+                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/programme/dorfentwicklung.html">Dorfentwicklung</a></li>
                   <li class="dropdown-divider"></li>
                   <li class="dropdown-item"><a href="#">Kinderpaten</a></li>
                   <li class="dropdown-divider"></li>
                   <li class="dropdown-item"><a href="#">Umwelt- und Naturschutz</a></li>
                 </ul>
               </li>
+              <li class="dropdown-divider"></li>
               <li class="dropdown-item"> <a href="#"> Themen</a> </li>
               <li class="dropdown-divider"></li>
               <li class="dropdown-submenu">
