--- a/templates/templatesDerWebsite/projekte/programme.html
+++ b/templates/templatesDerWebsite/projekte/programme.html
@@ -23,11 +23,9 @@
 
   <div class="container achterspaltenlayout">
     <div style="padding-bottom:50px; ">
-      <h1 style="padding-bottom: 30px;"> Unsere Projekte haben die Verbesserung der ganzheitlichen Lebensqualität der Menschen zum Ziel  </h1>
-      <p id="anleser"> Sie fördern die kulturelle, wirtschaftliche und ökologische Nachhaltigkeit, bekämpfen die Armut und stärken die Selbstbestimmung. In sozialen und
-        ökologischen Krisengebieten richten unsere Projekte sich in erster Linie an indigene
-        Gemeinschaften, Frauen, Kinder, Jugendliche und Randgruppen, die so für ihre Zukunft selbst aktiv werden können.
-
+      <h1 style="padding-bottom: 30px;"> Mit drei nachhaltigen Programmen zum Ziel  </h1>
+      <p id="anleser"> Durch die strategische Verknüpfung drei nachhaltiger Entwicklungsprogramme bekämpfen wir Armut, geben Hoffnung und erreichen unser Ziel: starke Dörfer,
+        gesunde Kinder und Familien, würdevolle Lebensperspektiven sowie ein verantwortlicher Umgang mit der Schöpfung.
       </p>
       </div>
     </div>
@@ -37,7 +35,7 @@
 
       <div class="row">
 
-    {% set entries = craft.entries.section('projekte').level(1).all() %}
+        {% set entries = craft.entries.section('projekte').slug('programme').one().children().all() %}
 
     {# If there are any entries, loop through them #}
     {% if entries | length %}
@@ -56,18 +54,11 @@
           </div>
       </div>
 
-
-        {% if counter == 3 %}
-        <div class="col-sm-2"> </div>    {% endif %}
-
         {% endfor %}
 
     {% endif %}
       </div>
     </div>
 
-  <div class="container-fluid no-padding">
-    <img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-programme.jpg').one().getUrl() }} ">
-  </div>
 
 {% endblock %}
