--- a/templates/templatesDerWebsite/ueberUns/arbeitsweise.html
+++ b/templates/templatesDerWebsite/ueberUns/arbeitsweise.html
@@ -18,8 +18,8 @@
   </div>
 </div>
 
-
-<div class="container" style="max-width: 1160px; padding-top: 50px; background-color: #ffffff;">
+<div class="container-fluid no-padding" style="background-color: #ffffff;">
+<div class="container zwoelferspaltenlayout" >
 
   <div class="row">
 
@@ -46,6 +46,7 @@
   {% endif %}
 
   </div>
+</div>
 </div>
 
 <div class="container-fluid no-padding">
