--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -79,7 +79,7 @@
                   <li class="dropdown-divider"></li>
                   <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/projekte/programme/kinderpate.html">Kinderpaten</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Umwelt- und Naturschutz</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/projekte/programme/naturschutz.html">Umwelt- und Naturschutz</a></li>
                 </ul>
               </li>
               <li class="dropdown-divider"></li>
