--- a/templates/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
@@ -9,7 +9,7 @@
 
   <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
-  <div class="container achterspaltenlayout">
+  <div class="container achterspaltenlayout" style="padding-top: 0px;">
     <h1 style="padding-bottom: 30px;"> Dorfentwicklung <br> Chancen für Dörfer  </h1>
     <p id="anleser"> Wir befähigen Dorfgemeinschaften, ihr Schicksal selbst in die Hand zu nehmen. Im Zentrum unseres Ansatzes stehen nicht die Probleme der Gemeinschaft,
       sondern das Potential der Dorfbewohner, das wir konsequent fördern. </p>
@@ -79,7 +79,7 @@
 
   </div>
 
-  <div class="container-fluid no-padding" style="background-color: #336600">
+  <div class="container-fluid no-padding" style="background-color: #9EAC50">
     <div class="container achterspaltenlayout text-center">
       {% set entry = craft.entries.section('projekte').slug('das-ziel-starke-dörfer').one() %}
         <h2 style="color: #ffffff;"> {{ entry.title }} </h2>
@@ -106,7 +106,7 @@
   </div>
 </div>
 
-<div class="container-fluid no-padding" style="background-color: orange;">
+<div class="container-fluid no-padding" style="background-color: #ED6E2C;">
   <div class="container zwoelferspaltenlayout">
     {% set entry = craft.entries.section('projekte').slug('dorfpate-werden').one() %}
     <div class="row">
