--- a/templates/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
@@ -85,7 +85,7 @@
   </div>
 </div>
 
-<div class="container-fluid no-padding" style="background-color: orange;">
+<div class="container-fluid no-padding" style="background-color: #ED6E2C;">
   <div class="container zwoelferspaltenlayout">
     {% set entry = craft.entries.section('projekte').slug('kinderpate-werden').one() %}
     <div class="row">
