anpassen des carousels

--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -83,7 +83,7 @@
                 </ul>
               </li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item"> <a href="#"> Themen</a> </li>
+              <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/projekte/themen.html"> Themen</a> </li>
               <li class="dropdown-divider"></li>
               <li class="dropdown-submenu">
                 <a  class="dropdown-item" tabindex="-1" href="#">Erfahrungsberichte</a>
