--- a/templates/craft_sicherungWebsite/templates/index.html
+++ b/templates/craft_sicherungWebsite/templates/index.html
@@ -7,8 +7,8 @@
 
 <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
-<div class="container achterspaltenlayout">
-  <div style="padding-bottom:80px; ">
+<div class="container achterspaltenlayout" style="padding-top: 0px;">
+  <div style="padding-bottom:80px;">
     <h1 style="padding-bottom: 30px;"> Für Mensch und Schöpfung  </h1>
     <p id="anleser"> Chance e.V. ist eine christliche, soziale und ökologische Initiative für nachhaltige Entwicklung
       im peruanischen Amazonasgebiet und bei den Maasai in Kenia.
