--- a/templates/craft_sicherungWebsite/templates/projekte/programme.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme.html
@@ -21,7 +21,7 @@
   <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
 
-  <div class="container achterspaltenlayout">
+  <div class="container achterspaltenlayout" style="padding-top: 0px;">
     <div style="padding-bottom:50px; ">
       <h1 style="padding-bottom: 30px;"> Mit drei nachhaltigen Programmen zum Ziel  </h1>
       <p id="anleser"> Durch die strategische Verknüpfung drei nachhaltiger Entwicklungsprogramme bekämpfen wir Armut, geben Hoffnung und erreichen unser Ziel: starke Dörfer,
