--- a/templates/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -14,46 +14,46 @@
 
     <h1 style="padding-bottom: 30px;"> {{ entry.anleser }}  </h1>
     <div id="anleser"> {{ entry.text }} </div>
+  </div>
+</div>
+
+<div class="container zwoelferspaltenlayout">
+  {% set entry = craft.entries.section('projekte').slug('umweltverschmutzung').one() %}
+
+  <div class="row">
+    <div class="col-sm-6">
+      <div id="copy"> {{ entry.anleser}} </div>
     </div>
-  </div>
-
-  <div class="container zwoelferspaltenlayout">
-    {% set entry = craft.entries.section('projekte').slug('umweltverschmutzung').one() %}
-
-    <div class="row">
-      <div class="col-sm-6">
-        <div id="copy"> {{ entry.anleser}} </div>
-      </div>
-      <div class="col-sm-6">
-        <div id="copy"> {{ entry.text}} </div>
-      </div>
-
+    <div class="col-sm-6">
+      <div id="copy"> {{ entry.text}} </div>
     </div>
+
   </div>
+</div>
 
-  <div class="container-fluid no-padding">
-    <img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz.jpg').one().getUrl() }}">
-  </div>
+<div class="container-fluid no-padding" style="margin-top: -50px;">
+  <img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz.jpg').one().getUrl() }}">
+</div>
 
-  <div class="container achterspaltenlayout text-center">
-    {% set entry = craft.entries.section('projekte').slug('bestandteile-naturschutzprogramms').one() %}
-    <h2> {{ entry.title }} </h2>
-    <div id="anleser"> {{ entry.anleser }} </div>
+<div class="container achterspaltenlayout text-center">
+  {% set entry = craft.entries.section('projekte').slug('bestandteile-naturschutzprogramms').one() %}
+  <h2> {{ entry.title }} </h2>
+  <div id="anleser"> {{ entry.anleser }} </div>
 
-    {% set entries = craft.entries.section('projekte').slug('bestandteile-naturschutzprogramms').one().children().all() %}
+  {% set entries = craft.entries.section('projekte').slug('bestandteile-naturschutzprogramms').one().children().all() %}
 
-    <div id="accordion">
+  <div id="accordion">
 
-      {# If there are any entries, loop through them #}
-      {% if entries | length %}        {% set counter = 0 %}
+    {# If there are any entries, loop through them #}
+    {% if entries | length %}        {% set counter = 0 %}
 
-      {# For each entry we find, do this #}
-      {% for entry in entries %} {% set counter = counter + 1 %}
+    {# For each entry we find, do this #}
+    {% for entry in entries %} {% set counter = counter + 1 %}
 
 
-      <div class="card" style=" border-color: white; border-top-color: #ed6e2c; border-width: 2px; margin-bottom: 20px;">
-        <div class="card-header bg-white">
-          <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
+    <div class="card" style=" border-color: white; border-top-color: #ed6e2c; border-width: 2px; margin-bottom: 20px;">
+      <div class="card-header bg-white">
+        <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
           <h4> {{ entry.title }}   </h4>       </a>
         </div>
         <div id="{{counter}}" class="collapse" data-parent="#accordion">
@@ -74,92 +74,115 @@
   <div class="container-fluid no-padding" style="background-color: #ffffff">
     <div class="container achterspaltenlayout text-center">
       {% set entry = craft.entries.section('projekte').slug('bewahrung-schöpfung').one() %}
-        <h2> {{ entry.title }} </h2>
-        <div id="anleser"> {{ entry.anleser }}    </div>
+      <h2> {{ entry.title }} </h2>
+      <div id="anleser"> {{ entry.anleser }}    </div>
     </div>
 
     <div class="container zwoelferspaltenlayout">
 
       <div class="row">
-      {% set entries = craft.entries.section('projekte').slug('bewahrung-schöpfung').one().children().all() %}
+        {% set entries = craft.entries.section('projekte').slug('bewahrung-schöpfung').one().children().all() %}
 
-      {% if entries | length %}
+        {% if entries | length %}
 
-      {% for entry in entries %}
-      <div class="col-sm-4">
-      <div id="copy"> {{ entry.text }} </div>
+        {% for entry in entries %}
+        <div class="col-sm-4">
+          <div id="copy"> {{ entry.text }} </div>
+        </div>
+
+        {% endfor %}
+
+        {% endif %}
+
       </div>
-
-      {% endfor %}
-
-      {% endif %}
-
     </div>
   </div>
-</div>
 
-<div class="container-fluid no-padding" style="background-color: #ED6E2C;">
-  <div class="container zwoelferspaltenlayout">
-    {% set entry = craft.entries.section('projekte').slug('waldpate-werden').one() %}
-    <div class="row">
-      <div class="col-sm-4">
-        Bild kommt da rein
+  <div class="container-fluid no-padding" style="background-color: #ED6E2C;">
+    <div class="container zwoelferspaltenlayout">
+      {% set entry = craft.entries.section('projekte').slug('waldpate-werden').one() %}
+      <div class="row">
+        <div class="col-sm-4">
+          Bild kommt da rein
+        </div>
+
+        <div class="col-sm-8">
+          <h3 style="color: #ffffff;"> {{ entry.title }} </h3>
+          <div id="copy" style="color: #ffffff;"> {{ entry.text }}    </div>
+        </div>
       </div>
-
-      <div class="col-sm-8">
-      <h3 style="color: #ffffff;"> {{ entry.title }} </h3>
-      <div id="copy" style="color: #ffffff;"> {{ entry.text }}    </div>
-    </div>
     </div>
   </div>
-</div>
 
   <div class="container achterspaltenlayout text-center">
     {% set entry = craft.entries.section('projekte').slug('regenwald').one() %}
 
-      <h2> {{ entry.title }} </h2>
-      <div id="anleser"> {{ entry.anleser }}    </div>
-    </div>
+    <h2> {{ entry.title }} </h2>
+    <div id="anleser"> {{ entry.anleser }}    </div>
+  </div>
 
-    <div class="container achterspaltenlayout">
-      <div id="copy"> {{ entry.text }}    </div>
+  <div class="container achterspaltenlayout">
+    <div id="copy"> {{ entry.text }}    </div>
 
   </div>
 
-<div class="container-fluid no-padding">
-  <img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz_maedchen.jpg').one().getUrl() }}">
-</div>
+  <div class="container-fluid no-padding">
+    <img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz_maedchen.jpg').one().getUrl() }}">
+  </div>
 
-<div class="container zwoelferspaltenlayout text-center">
-  {% set entry = craft.entries.section('projekte').slug('der-chance-regenwald-in-zahlen').one() %}
-  <h3> {{ entry.title }} </h3>
+  <div class="container zwoelferspaltenlayout text-center">
+    {% set entry = craft.entries.section('projekte').slug('der-chance-regenwald-in-zahlen').one() %}
+    <h3> {{ entry.title }} </h3>
 
+    {% set entry = craft.entries.section('projekte').slug('1-11').one() %}
 
-  {% set entries = craft.entries.section('projekte').slug('der-chance-regenwald-in-zahlen').one().children().all() %}
+    <div id="carouselContent" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active text-center">
+          <div class="row">
 
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-      {% if entries | length %}
+            <div class="col-md-4">
+              <h3> {{ entry.title }} </h3>
+              <div id="copy"> {{ entry.text }} </h3> </div>
+            </div>
 
-      {% for entry in entries %}
-      <div class="carousel-item">
-      <div id="copy"> {{ entry.text }} </div>
+            {% set counter = 0 %}
+            {% set entries = craft.entries.section('projekte').slug('der-chance-regenwald-in-zahlen').one().children().all() %}
+            {% for entry in entries %} {% set counter = counter + 1 %}
+            {# Nach jedem dritten Eintrag wird das Karussel-item geschlossen und drei neue geladen #}
+
+            {% if counter is divisible by(3) %}
+          </div>
+        </div>  <div class="carousel-item text-center"> <div class="row"> {% endif %}
+
+            <div class="col-md-4">
+              <h3> {{ entry.title }} </h3>
+              <div id="copy"> {{ entry.text }} </h3>  </div>
+            </div>
+
+            {% endfor %}
+          </div>
+        </div>
       </div>
 
-      {% endfor %}
-
-      {% endif %}
+        <a class="carousel-control-prev" href="#carouselContent" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselContent" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true" style="color: red;">
+          </span>
+          <span class="sr-only">Next</span>
+        </a>
     </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+  </div>
 
-</div>
+
+  <div class="container achterspaltenlayout text-center">
+    {% set entry = craft.entries.section('projekte').slug('gelingenden-leben').one() %}
+
+    <h2> {{ entry.title }} </h2>
+    <div id="anleser"> {{ entry.anleser }}    </div>
+  </div>
 
   {% endblock %}
