--- a/templates/craft_sicherungWebsite/templates/ueberUns/verein.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/verein.html
@@ -9,7 +9,7 @@
 
 <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
-<div class="container achterspaltenlayout">
+<div class="container achterspaltenlayout" style="padding-top: 0px;">
   <div style="padding-bottom:80px; ">
     <h1 style="padding-bottom: 30px;"> Gemeinnützig und christlich  </h1>
     <p id="anleser"> Chance e.V. ist ein gemeinnütziger Verein und eine christliche Initiative für
