--- a/templates/craft_sicherungWebsite/web/CSSundJS/stylevorgaben.css
+++ b/templates/craft_sicherungWebsite/web/CSSundJS/stylevorgaben.css
@@ -38,14 +38,13 @@
 /* Die Stylevorgabe, die für Text in der Website verwendet wird. */
 .achterspaltenlayout {
   padding-top: 50px;
-  max-width: 760px;">
+  max-width: 760px;
 }
 
 /* Die Stylevorgabe, die für Text in der Website verwendet wird. */
 .zwoelferspaltenlayout {
   max-width: 1160px;
 	padding-top: 50px;
-  padding-bottom: 50px;
 }
 
 
@@ -92,7 +91,6 @@ h4 {
 	line-height: 28px;
 	font-family: 'source_sans_prolight';
 	color: #000000;
-	padding-bottom: 30px;
 }
 
 #autor {
@@ -106,12 +104,22 @@ h4 {
   h1 {
     font-size: 31px;
     line-height: 36px; }
+
+    #anleser {
+      font-size: 19px;
+      line-height: 27px;
+    }
   }
 
   @media all and (max-width: 1100px) and (min-width: 700px) {
     h1 {
       font-size: 41px;
       line-height: 48px; }
+
+  #anleser {
+    font-size: 21px;
+    line-height: 31px;
+  }
     }
 
 /* Bei den Empfehlungs-boxen wird so die Umrandung entfernt */
@@ -137,6 +145,17 @@ h4 {
    margin-top: -45px;
    transform: rotate(-90deg);
 }
+
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%6c757d' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+    margin-left: -100%;
+}
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%6c757d' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+    margin-right: -100%;
+}
+
 
 
 body {
