Weitermachen mit inhalt der seite

--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -86,9 +86,9 @@
               <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/projekte/themen.html"> Themen</a> </li>
               <li class="dropdown-divider"></li>
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Erfahrungsberichte</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/erfahrungsberichte.html">Erfahrungsberichte</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Bericht</a></li>
+                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/erfahrungsberichte/medalid.html">1. Bericht</a></li>
                   <li class="dropdown-divider"></li>
                   <li class="dropdown-item"><a href="#">2. Bericht</a></li>
                   <li class="dropdown-divider"></li>
@@ -97,7 +97,7 @@
               </li>
 
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Projektberichte</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/projektberichte.html">Projektberichte</a>
                 <ul class="dropdown-menu">
                   <li class="dropdown-item"><a tabindex="-1" href="#">1. Bericht</a></li>
                   <li class="dropdown-divider"></li>
@@ -212,6 +212,6 @@
   </div>
 </nav>
 
-<div class="container-fluid no-padding" style="  position:fixed; top:0; z-index: 900;">
+<div class="container-fluid no-padding" style="position:fixed; top:0; z-index: 900; padding-top: 0px;">
   <div class="rectangle" id="rechteck"></div>
 </div>
