--- a/templates/craft_sicherungWebsite/templates/projekte/themen.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/themen.html
@@ -23,7 +23,7 @@
   <div class="container achterspaltenlayout text-center">
     {% set entry = craft.entries.section('projekte').slug('armutsbekämpfung').one() %}
       <h2> {{ entry.title }} </h2>
-      <div id="anleser"> {{ entry.anleser }}</div>
+      <div id="anleser" style="padding-bottom: 0px;"> {{ entry.anleser }}</div>
   </div>
 
   <div class="container achterspaltenlayout">
@@ -41,26 +41,20 @@
       <div class="carousel-item active text-center">
         <div class="row">
 
-          <div class="col-md-4">
-            bild
-            <h4> {{ entry.title }} </h4>
-            <div id="copy"> {{ entry.anleser }} </h3> </div>
-          </div>
-
           {% set counter = 0 %}
           {% set entries = craft.entries.section('projekte').slug('armutsbekämpfung').one().children().all() %}
           {% for entry in entries %} {% set counter = counter + 1 %}
           {# Nach jedem dritten Eintrag wird das Karussel-item geschlossen und drei neue geladen #}
-
-          {% if counter is divisible by(3) %}
-        </div>
-      </div>  <div class="carousel-item text-center"> <div class="row"> {% endif %}
 
           <div class="col-md-4">
             bild
             <h4> {{ entry.title }} </h4>
             <div id="copy"> {{ entry.anleser }} </h3>  </div>
           </div>
+
+          {% if counter is divisible by(3) %}
+        </div>
+      </div>  <div class="carousel-item text-center"> <div class="row"> {% endif %}
 
           {% endfor %}
         </div>
@@ -84,7 +78,7 @@
   <div class="container achterspaltenlayout text-center">
     {% set entry = craft.entries.section('projekte').slug('bildung').one() %}
       <h2> {{ entry.title }} </h2>
-      <div id="anleser"> {{ entry.anleser }}</div>
+      <div id="anleser" style="padding-bottom: 0px;"> {{ entry.anleser }}</div>
   </div>
 
   <div class="container achterspaltenlayout">
@@ -95,27 +89,15 @@
 
 <div class="container zwoelferspaltenlayout text-center">
 
-  {% set entry = craft.entries.section('projekte').slug('weniger-als').one() %}
-
-  <div id="carouselContent" class="carousel slide" data-ride="carousel">
+  <div id="carousel2" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active text-center">
         <div class="row">
-
-          <div class="col-md-4">
-            bild
-            <h4> {{ entry.title }} </h4>
-            <div id="copy"> {{ entry.anleser }} </h3> </div>
-          </div>
 
           {% set counter = 0 %}
           {% set entries = craft.entries.section('projekte').slug('bildung').one().children().all() %}
           {% for entry in entries %} {% set counter = counter + 1 %}
           {# Nach jedem dritten Eintrag wird das Karussel-item geschlossen und drei neue geladen #}
-
-          {% if counter is divisible by(3) %}
-        </div>
-      </div>  <div class="carousel-item text-center"> <div class="row"> {% endif %}
 
           <div class="col-md-4">
             bild
@@ -123,21 +105,208 @@
             <div id="copy"> {{ entry.anleser }} </h3>  </div>
           </div>
 
+          {% if counter is divisible by(3) %}
+        </div>
+      </div>
+      <div class="carousel-item text-center"> <div class="row"> {% endif %}
+
           {% endfor %}
         </div>
       </div>
     </div>
 
-      <a class="carousel-control-prev" href="#carouselContent" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselContent" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true" style="color: red;">
-        </span>
-        <span class="sr-only">Next</span>
-      </a>
+    <a class="carousel-control-prev" href="#carousel2" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel2" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true" style="color: red;">
+      </span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 </div> <!-- Container für Carousel -->
+
+<div class="container-fluid no-padding" style="background-color: #ffffff;">
+
+  <div class="container achterspaltenlayout text-center" style="padding-bottom: 0px;">
+    {% set entry = craft.entries.section('projekte').slug('engagement').one() %}
+      <h2> {{ entry.title }} </h2>
+      <div id="anleser" style="padding-bottom: 0px;"> {{ entry.anleser }}</div>
+  </div>
+
+  <div class="container achterspaltenlayout">
+    <div id="copy">    {{ entry.text }}   </div>
+  </div>
+
+</div> <!-- Weißer Hintergrundcontainer -->
+
+<div class="container zwoelferspaltenlayout text-center">
+
+  <div id="carousel3" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active text-center">
+        <div class="row">
+
+          {% set counter = 0 %}
+          {% set entries = craft.entries.section('projekte').slug('engagement').one().children().all() %}
+          {% for entry in entries %} {% set counter = counter + 1 %}
+          {# Nach jedem dritten Eintrag wird das Karussel-item geschlossen und drei neue geladen #}
+
+          <div class="col-md-4">
+            bild
+            <h4> {{ entry.title }} </h4>
+            <div id="copy"> {{ entry.anleser }} </h3>  </div>
+          </div>
+
+          {% if counter is divisible by(3) %}
+        </div>
+      </div>
+      <div class="carousel-item text-center"> <div class="row"> {% endif %}
+
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+
+    <a class="carousel-control-prev" href="#carousel3" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel3" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true" style="color: red;">
+      </span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div> <!-- Container für Carousel -->
+
+
+<div class="container-fluid no-padding" style="background-color: #ffffff;">
+
+  <div class="container achterspaltenlayout text-center" style="padding-bottom: 0px;">
+    {% set entry = craft.entries.section('projekte').slug('soziales').one() %}
+      <h2> {{ entry.title }} </h2>
+      <div id="anleser" style="padding-bottom: 0px;"> {{ entry.anleser }}</div>
+  </div>
+
+  <div class="container achterspaltenlayout">
+    <div id="copy">    {{ entry.text }}   </div>
+  </div>
+
+</div> <!-- Weißer Hintergrundcontainer -->
+
+<div class="container zwoelferspaltenlayout text-center">
+
+  <div id="carousel4" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active text-center">
+        <div class="row">
+
+          {% set counter = 0 %}
+          {% set entries = craft.entries.section('projekte').slug('soziales').one().children().all() %}
+          {% for entry in entries %} {% set counter = counter + 1 %}
+          {# Nach jedem dritten Eintrag wird das Karussel-item geschlossen und drei neue geladen #}
+
+          <div class="col-md-4">
+            bild
+            <h4> {{ entry.title }} </h4>
+            <div id="copy"> {{ entry.anleser }} </h3>  </div>
+          </div>
+
+          {% if counter is divisible by(3) %}
+        </div>
+      </div>
+      <div class="carousel-item text-center"> <div class="row"> {% endif %}
+
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+
+    <a class="carousel-control-prev" href="#carousel4" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel4" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true" style="color: red;">
+      </span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div> <!-- Container für Carousel -->
+
+<div class="container-fluid no-padding" style="background-color: #ffffff;">
+
+  <div class="container achterspaltenlayout text-center" style="padding-bottom: 0px;">
+    {% set entry = craft.entries.section('projekte').slug('umwelt-und-naturschutz-1').one() %}
+      <h2> {{ entry.title }} </h2>
+      <div id="anleser" style="padding-bottom: 0px;"> {{ entry.anleser }}</div>
+  </div>
+
+  <div class="container achterspaltenlayout">
+    <div id="copy">    {{ entry.text }}   </div>
+  </div>
+
+</div> <!-- Weißer Hintergrundcontainer -->
+
+<div class="container zwoelferspaltenlayout text-center">
+
+  <div id="carousel5" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active text-center">
+        <div class="row">
+
+          {% set counter = 0 %}
+          {% set entries = craft.entries.section('projekte').slug('umwelt-und-naturschutz-1').one().children().all() %}
+          {% for entry in entries %} {% set counter = counter + 1 %}
+          {# Nach jedem dritten Eintrag wird das Karussel-item geschlossen und drei neue geladen #}
+
+          <div class="col-md-4">
+            bild
+            <h4> {{ entry.title }} </h4>
+            <div id="copy"> {{ entry.anleser }} </h3>  </div>
+          </div>
+
+          {% if counter is divisible by(3) %}
+        </div>
+      </div>
+      <div class="carousel-item text-center"> <div class="row"> {% endif %}
+
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+
+    <a class="carousel-control-prev" href="#carousel5" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel5" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true" style="color: red;">
+      </span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div> <!-- Container für Carousel -->
+
+
+<div class="container-fluid no-padding" style="background-color: #ffffff;">
+
+  <div class="container achterspaltenlayout" style="padding-bottom: 0px;">
+    <h4> Quellen: </h4>
+  * http://www.unric.org/html/german/mdg/MP_PovertyFacts.pdf <br>
+  1 Deutschlandfunk: „Durchwachsene Bilanz im Kampf gegen die Armut“ 23.03.15, http://www.deutschlandfunk.de/entwicklungslaender-durchwachsene-bilanz-im-kampf-gegen-die.724.de.html?dram:article_id=314962 <br>
+  2 UNICEF, „The State of the World’s Children 2015: Reimagine the Future“, http://sowc2015.unicef.org, Under-5 mortality rate (2013) S.31, New York 2015. <br>
+  3 Ravallion, M; Chen, S; Sangraula, P. Dollar a Day Revisited. World Bank Economic Review. 23, 2, 163-184, 2009. <br>
+  4 Worldbank: http://data.worldbank.org/indicator/SI.POV.DDAY/countries?display=graph <br>
+  5 UNICEF, „The State of the World’s Children 2010“, http://www.unicef.org/rightsite/sowc/ <br>
+  6 WHO, World Hunger and Poverty Statistics, 2013, http://www.worldhunger.org/articles/Learn/world%20hunger%20facts%202002.htm <br>
+  7 FAO, State of Food Insecurity in the World, 2015. http://www.fao.org/3/a-i4646e.pdf <br>
+  8 Welthungerhilfe: „FACT-Sheet. Fakten und Zahlen zu Wasser“, 2013, http://www.welthungerhilfe.de/fileadmin/user_upload/Themen/ <br>
+
+  </div>
+
+</div> <!-- Weißer Hintergrundcontainer -->
 
 {% endblock %}
