für sie weitermachen

--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -167,13 +167,13 @@
               <li class="dropdown-divider"></li>
 
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Freiwilligendienst</a>
+                <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/freiwilligendienst.html">Freiwilligendienst</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">Mit "weltwärts" nach Peru oder Kenia</a></li>
+                  <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/weltwaerts.html">Mit "weltwärts" nach Peru oder Kenia</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Weitere Einsatzmöglichkeiten in Peru</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/peru.html">Weitere Einsatzmöglichkeiten in Peru</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">Deine Bewerbung</a></li>
+                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/bewerbung.html">Deine Bewerbung</a></li>
                   <li class="dropdown-divider"></li>
                   <li class="dropdown-item"><a href="#">Erfahrungsberichte</a></li>
                 </ul>
